setting the app as / path

--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -18,10 +18,7 @@
   -->
 
   <main>
-    <route default>
-      <application name="@single-spa/welcome"></application>
-    </route>
-    <route path="/datagrid">
+    <route path="/">
       <application name="@testOrg/testApp"></application>
     </route>
   </main>
